# ebac-dev-fsp-fullstack

./: .editorconfig  .gitignore  .http  README.md  rav.yaml
backend/: .env.example  .gitignore  .http  README.md  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini  requirements.txt
backend/api/: urls.py  views.py
backend/comments/: models.py  serializers.py  views.py
backend/comments/migrations/: 0001_initial.py  0002_alter_comment_comment_image.py  0003_alter_comment_comment.py
backend/friendship/: admin.py  models.py  serializers.py  views.py
backend/friendship/migrations/: 0001_initial.py
backend/posts/: models.py  serializers.py  views.py
backend/posts/migrations/: 0001_initial.py  0002_alter_post_post_image.py
backend/social_h/: asgi.py  settings.py  urls.py  views.py  wsgi.py
backend/social_h/templates/: hello_world.html
backend/user_profile/: models.py  serializers.py  views.py
backend/user_profile/migrations/: 0001_initial.py  0002_alter_userprofile_first_name_and_more.py  0003_remove_userprofile_first_name_and_more.py
backend/users/: serializers.py  views.py
backend/votes/: admin.py  models.py  permissions.py  serializers.py  views.py
backend/votes/migrations/: 0001_initial.py  0002_alter_vote_down_vote_by_alter_vote_up_vote_by.py
frontend/: .env.example  .eslintrc.json  .gitignore  next.config.mjs  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: comment.tsx  footer.tsx  header.tsx  infoblock.tsx  logout-button.tsx  menubar.tsx  menuitem.tsx  modalmessage.tsx  navbar.tsx  post.tsx  (+7 more)
(+30 files in other folders)
